finalise the site

--- a/home.html
+++ b/home.html
@@ -60,7 +60,7 @@
 
 
     <!-- start container -->
-    <div id="top-container" class="container-fluid mt-5">
+    <div id="top-container" class="container-fluid pt-5">
       
       <div id="head" class="row pb-5">
         <div id="logocon" class="col-lg-6 col-md-6 col-sm-12 mt-3">
@@ -119,7 +119,24 @@
         <p class="text-center mt-3"><a href="#top-container"><i class="fas fa-angle-double-up fa-3x text-warning"></i></a></p>
         <p class="mb-5">Back to Top</p>
         <img id="logo-bottom" src="assets/images/logo.png" class="rounded" alt="logo">
-        <p><i class="fab fa-facebook fa-2x"></i>  <i class="fab fa-instagram fa-2x"></i>  <i class="fab fa-twitter fa-2x"></i>  <i class="fab fa-pinterest-square fa-2x"></i>  <i class="fab fa-google-plus-g fa-2x"></i></p>
+        <p>
+        <br>
+        <a href="#">
+          <i class="fab fa-facebook fa-2x mr-1"></i>
+        </a>
+        <a href="#">
+        <i class="fab fa-instagram fa-2x mr-1"></i>
+        </a>
+        <a href="#">
+        <i class="fab fa-twitter fa-2x" mr-1></i>
+        </a>
+        <a href="#">
+        <i class="fab fa-pinterest-square fa-2x mr-1"></i>
+        </a>
+        <a href="#">
+        <i class="fab fa-google-plus-g fa-2x mr-1"></i>
+        </a>
+        </p>
       <p>&copy; 2018 Pork Gloria Barbecue</p>
     </div>
 
