--- a/menu.html
+++ b/menu.html
@@ -66,29 +66,11 @@
     <!-- start container -->
     <div class="container">
 
-      <div class="jumbotron-fluid mt-5 p-5">
+      <div id="top" class="jumbotron-fluid mt-5 p-5">
         <h2 class="text-center text-white">Our Menu</h2>
 
       </div>
 
-      <!-- <div class="text-center">
-        <a href="assets/images/bbq2.jpg" data-lightbox="bbq">
-          <img class="img-thumbnail" src="assets/images/bbq2.jpg">
-        </a>
-
-        <a href="assets/images/bbq4.jpg" data-lightbox="bbq">
-          <img class="img-thumbnail" src="assets/images/bbq4.jpg">
-        </a>
-
-        <a href="assets/images/beer.jpg" data-lightbox="bbq">
-          <img class="img-thumbnail" src="assets/images/beer.jpg">
-        </a>
-
-        <a href="assets/images/bbq7.jpg" data-lightbox="bbq">
-          <img class="img-thumbnail" src="assets/images/bbq7.jpg">
-        </a>
-      </div>
- -->
       <div class="card-deck mb-5">
 
         <div class="card">
@@ -97,7 +79,12 @@
           </a>
           <div class="card-body">
             <h5 class="card-title">BBQ</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <h4>Cerdo Picante</h4>
+            <p class="card-text"><small>Smoked pork shoulder in spices</small></p>
+            <h4>Smoked Filet Mignon</h4>
+            <p class="card-text"><small>Served with your choice of sides</small></p>
+            <h4>Smoked Chicken Wings</h4>
+            <p class="card-text"><small>Mild spiced flavor, best with beer</small></p>
           </div>
         </div>
 
@@ -108,17 +95,27 @@
           </a>
           <div class="card-body">
             <h5 class="card-title">Skewers</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <h4>Kebab</h4>
+            <p class="card-text"><small>It is not your typical kebab</small></p>
+            <h4>Sunday Clubhouse</h4>
+            <p class="card-text"><small>A combination of turkey, lamb, beef, onion, tomato and pepper</small></p>
+            <h4>All-Meat and Spice</h4>
+            <p class="card-text"><small>A choice of your meat and a ghost chili.</small></p>
           </div>
         </div>
 
         <div class="card">
-          <a href="assets/images/slider.jpg" data-lightbox="bbq">
-            <img class="card-img-top" src="assets/images/slider.jpg" alt="Card image cap">
+          <a href="assets/images/sandwich2.jpg" data-lightbox="bbq">
+            <img class="card-img-top" src="assets/images/sandwich2.jpg" alt="Card image cap">
           </a>
           <div class="card-body">
             <h5 class="card-title">Sandwiches</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            <h4>Classic Sliders</h4>
+            <p class="card-text"><small>Grilled patties with tomato and lettuce in a potato bun</small></p>
+            <h4>Pulled Pork Slabwich</h4>
+            <p class="card-text"><small>Our Signature 16 inches BBQ sandwich</small></p>
+            <h4>The Rocket</h4>
+            <p class="card-text"><small>Our best sausage sandwich, you can choose your sausage to kielbasa, frankfurter or hungarian</small></p>
           </div>
         </div>
       </div>
@@ -127,27 +124,50 @@
        <div class="card-deck">
 
         <div class="card">
-          <img class="card-img-top" src="assets/images/potato.jpg" alt="Card image cap">
+	        <a href="assets/images/potato.jpg" data-lightbox="bbq">
+	          <img class="card-img-top img-fluid max-width: 100%; height: auto;" src="assets/images/potato.jpg" alt="Card image cap">
+	        </a>
           <div class="card-body">
             <h5 class="card-title">Sides</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <h4>The Smasher</h4>
+            <p class="card-text"><small>Mashed potato with bacon bits</small></p>
+            <h4>We Smoke Greens</h4>
+            <p class="card-text"><small>Smoked asparagus, broccoli and celery</small></p>
+            <h4>The Classic Sides</h4>
+            <p class="card-text"><small>Corn muffin and fries</small></p>
           </div>
         </div>
 
 
         <div class="card">
-          <img class="card-img-top" src="assets/images/sausage.jpg" alt="Card image cap">
+	        <a href="assets/images/sausage.jpg" data-lightbox="bbq">
+	          <img class="card-img-top" src="assets/images/sausage.jpg" alt="Card image cap">
+	        </a>
           <div class="card-body">
             <h5 class="card-title">Sausages</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <h4>Kielbasa</h4>
+            <p class="card-text"><small>Polish sausages</small></p>
+            <h4>Frankfurter</h4>
+            <p class="card-text"><small>German's finest</small></p>
+            <h4>Hungarian</h4>
+            <p class="card-text"><small>It's spicy. Promise</small></p>
+            <h4>Mettwurst</h4>
+            <p class="card-text"><small>A smokey German classic</small></p>
           </div>
         </div>
         
         <div class="card">
-          <img class="card-img-top" src="assets/images/dessert.jpg" alt="Card image cap">
+	        <a href="assets/images/dessert.jpg" data-lightbox="bbq">
+	          <img class="card-img-top" src="assets/images/dessert.jpg" alt="Card image cap">
+	        </a>
           <div class="card-body">
             <h5 class="card-title">Desserts</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            <h4>Milo Chupacabra Pudding</h4>
+            <p class="card-text"><small>A flavor of milo, tequila and vanilla in a pudding</small></p>
+            <h4>Red Velvet Cake</h4>
+            <p class="card-text"><small>This is our cake to remember</small></p>
+            <h4>Black Forest Cake</h4>
+            <p class="card-text"><small>This is our cake to die for</small></p>
           </div>
         </div>
       </div>
@@ -156,12 +176,28 @@
     <!-- end container -->
     
     <div id="footer" class="text-center">
-    	<p class="text-center mt-3"><a href="#landing-about"><i class="fas fa-angle-double-up fa-3x text-warning"></i></a></p>
+    	<p class="text-center mt-3"><a href="#top"><i class="fas fa-angle-double-up fa-3x text-warning"></i></a></p>
     	<p class="mb-5">Back to Top</p>
       <img id="logo" src="assets/images/logo2.png" class="rounded" alt="logo">
       <br>
       <br>
-      <p><i class="fab fa-facebook fa-2x"></i>  <i class="fab fa-instagram fa-2x"></i>  <i class="fab fa-twitter fa-2x"></i>  <i class="fab fa-pinterest-square fa-2x"></i>  <i class="fab fa-google-plus-g fa-2x"></i></p>
+      <p>
+      <a href="#">
+        <i class="fab fa-facebook fa-2x mr-1"></i>
+      </a>
+      <a href="#">
+      <i class="fab fa-instagram fa-2x mr-1"></i>
+      </a>
+      <a href="#">
+      <i class="fab fa-twitter fa-2x mr-1"></i>
+      </a>
+      <a href="#">
+      <i class="fab fa-pinterest-square fa-2x mr-1"></i>
+      </a>
+      <a href="#">
+      <i class="fab fa-google-plus-g fa-2x mr-1"></i>
+      </a>
+      </p>
       <p>&copy; 2018 Pork Gloria Barbecue</p>
     </div>
   </body>
