--- a/about.html
+++ b/about.html
@@ -121,7 +121,23 @@
       <img id="logo" src="assets/images/logo2.png" class="rounded" alt="logo">
       <br>
       <br>
-      <p><i class="fab fa-facebook fa-2x"></i>  <i class="fab fa-instagram fa-2x"></i>  <i class="fab fa-twitter fa-2x"></i>  <i class="fab fa-pinterest-square fa-2x"></i>  <i class="fab fa-google-plus-g fa-2x"></i></p>
+      <p>
+      <a href="#">
+        <i class="fab fa-facebook fa-2x mr-1"></i>
+      </a>
+      <a href="#">
+      <i class="fab fa-instagram fa-2x mr-1"></i>
+      </a>
+      <a href="#">
+      <i class="fab fa-twitter fa-2x mr-1"></i>
+      </a>
+      <a href="#">
+      <i class="fab fa-pinterest-square fa-2x mr-1"></i>
+      </a>
+      <a href="#">
+      <i class="fab fa-google-plus-g fa-2x mr-1"></i>
+      </a>
+      </p>
       <p>&copy; 2018 Pork Gloria Barbecue</p>
     </div>
   </body>
