--- a/menu.html
+++ b/menu.html
@@ -35,7 +35,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script type="text/javascript" src="assets/js/lightbox.js"></script>
 
-    <title>Pork Gloria | About</title>
+    <title>Pork Gloria | Menu</title>
   </head>
   <body>
     <!-- start nav -->
